--- a/package.json
+++ b/package.json
@@ -1,1 +1,40 @@
-{"name":"svelte-time-series"}
+{
+  "name": "svelte-time-series",
+  "version": "0.0.0-semantic-release",
+  "module": "src/index.svelte",
+  "svelte": "src/index.svelte",
+  "keywords": [
+    "svelte"
+  ],
+  "scripts": {
+    "pretest": "(cd example && rollup -c)",
+    "start": "serve -u -s -n -l 5000 example/public",
+    "test": "nightwatch -e ci"
+  },
+  "devDependencies": {
+    "chromedriver": "^76.0.0",
+    "nightwatch": "^1.1.13",
+    "rollup": "^1.19.3",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-svelte": "^5.1.0",
+    "semantic-release": "^15.13.19",
+    "serve": "^11.1.0",
+    "svelte": "^3.7.1"
+  },
+  "engines": {
+    "node": ">=10.16.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arlac77/svelte-time-series.git"
+  },
+  "bugs": {
+    "url": "https://github.com/arlac77/svelte-time-series/issues"
+  },
+  "homepage": "https://github.com/arlac77/svelte-time-series#readme",
+  "template": {
+    "repository": {
+      "url": "https://github.com/arlac77/npm-package-template-svelte.git"
+    }
+  }
+}
