--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "svelte-time-series",
   "version": "0.0.0-semantic-release",
   "module": "src/index.svelte",
-  "svelte": "src/index.svelte",
   "keywords": [
     "svelte"
   ],
   "scripts": {
     "pretest": "(cd example && rollup -c)",
-    "start": "serve -u -s -n -l 5000 example/public",
-    "test": "nightwatch -e ci",
-    "watch": "(cd example && rollup -c -w)"
+    "start": "(cd example && rollup -c -w) && serve -u -s -n -l 5000 example/public",
+    "test": "nightwatch -e ci"
   },
   "dependencies": {
     "d3-scale": "^3.0.1"
@@ -40,5 +38,6 @@
     "repository": {
       "url": "https://github.com/arlac77/npm-package-template-svelte.git"
     }
-  }
+  },
+  "svelte": "src/index.svelte"
 }
