--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "svelte"
   ],
   "scripts": {
-    "pretest": "(cd example && rollup -c)",
-    "start": "(cd example && rollup -c -w)",
-    "test": "testcafe chrome:headless tests/plain-navigation-test.js -s test-results --app-init-delay 1000 --app \"rollup -c example/rollup.config.js -w\""
+    "test": "testcafe chrome:headless tests/*-test.js -s test-results --app-init-delay 1000 --app \"rollup -c example/rollup.config.js -w\""
   },
   "dependencies": {
     "d3-scale": "^3.0.1"
