--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0-semantic-release",
   "module": "src/index.svelte",
   "svelte": "src/index.svelte",
+  "description": "display time series data with svelte",
   "keywords": [
     "svelte"
   ],
@@ -14,6 +15,7 @@
   },
   "devDependencies": {
     "rollup": "^1.19.4",
+    "rollup-plugin-livereload": "^1.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.1.0",
     "semantic-release": "^15.13.21",
