--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "svelte"
   ],
   "scripts": {
+    "start": "rollup -c example/rollup.config.js -w",
     "test": "testcafe chrome:headless tests/*-test.js -s test-results --app-init-delay 500 --app \"rollup -c example/rollup.config.js -w\""
   },
   "dependencies": {
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "rollup": "^1.20.3",
+    "rollup-plugin-dev": "0.0.3",
     "rollup-plugin-livereload": "^1.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.1.0",
