--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   ],
   "scripts": {
     "start": "rollup -c example/rollup.config.js -w",
-    "test": "testcafe chrome:headless tests/*-test.js -s test-results --app-init-delay 500 --app \"rollup -c example/rollup.config.js -w\""
+    "test": "testcafe chromium:headless tests/*-test.js -s test-results --app-init-delay 500 --app \"rollup -c example/rollup.config.js -w\""
   },
   "dependencies": {
     "d3-scale": "^3.0.1"
   },
   "devDependencies": {
     "rollup": "^1.21.2",
-    "rollup-plugin-dev": "0.0.3",
+    "rollup-plugin-dev": "1.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.1.0",
     "semantic-release": "^15.13.24",
