--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "svelte"
   ],
   "scripts": {
+    "docs": "documentation readme src/index.svelte --section=API",
+    "lint": "documentation lint src/index.svelte",
     "start": "rollup -c example/rollup.config.js -w",
     "test": "testcafe $BROWSER:headless tests/*-test.js -s test-results --app-init-delay 500 --app \"rollup -c example/rollup.config.js -w\""
   },
@@ -15,6 +17,7 @@
     "d3-scale": "^3.0.1"
   },
   "devDependencies": {
+    "documentation": "^12.1.2",
     "rollup": "^1.21.2",
     "rollup-plugin-dev": "1.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
