--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "keywords": [
     "svelte"
   ],
+  "license": "BSD-2-Clause",
   "scripts": {
     "docs": "documentation readme src/index.mjs --section=API",
     "lint": "documentation lint src/index.mjs",
@@ -17,14 +18,14 @@
     "d3-scale": "^3.0.1"
   },
   "devDependencies": {
-    "documentation": "^12.1.2",
-    "rollup": "^1.26.0",
-    "rollup-plugin-dev": "1.0.0",
+    "documentation": "^12.1.3",
+    "rollup": "^1.26.5",
+    "rollup-plugin-dev": "^1.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.1.0",
-    "semantic-release": "^15.13.26",
+    "semantic-release": "^15.13.30",
     "svelte": "^3.12.1",
-    "testcafe": "^1.6.0"
+    "testcafe": "^1.6.1"
   },
   "engines": {
     "node": ">=12.12.0"
