chore(package): update package.json from template chore(license): add year 2020

--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "url": "https://github.com/arlac77/svelte-time-series/issues"
   },
   "homepage": "https://github.com/arlac77/svelte-time-series#readme",
-  "config": {
-  },
+  "config": {},
   "template": {
     "repository": {
       "url": "https://github.com/arlac77/npm-package-template-svelte.git"
