--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
   },
   "homepage": "https://github.com/arlac77/svelte-time-series#readme",
   "template": {
-    "inheritFrom": "arlac77/template-svelte"
+    "inheritFrom": [
+      "arlac77/template-svelte",
+      "arlac77/template-github"
+    ]
   }
 }
