chore(travis): (jobs.include) chore(travis): remove true (jobs.include.deploy.skip_cleanup) chore(travis): add false (jobs.include.deploy.cleanup)

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,10 @@ jobs:
       script: skip
       deploy:
         provider: script
-        skip_cleanup: 'true'
         script:
           - npx xsemantic-release
           - npx semantic-release
+        cleanup: 'false'
 branches:
   only:
     - master
