--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "svelte": "src/index.svelte",
   "description": "display time series data with svelte",
   "keywords": [
-    "svelte"
+    "svelte",
+    "web",
+    "component"
   ],
   "contributors": [
     {
@@ -29,7 +31,7 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^7.1.3",
     "documentation": "^12.3.0",
-    "rollup": "^2.7.5",
+    "rollup": "^2.7.6",
     "rollup-plugin-dev": "^1.1.2",
     "rollup-plugin-svelte": "^5.2.1",
     "semantic-release": "^17.0.7",
@@ -37,7 +39,7 @@
     "testcafe": "^1.8.4"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=14.1.0"
   },
   "repository": {
     "type": "git",
