--- a/.github/workflows/update_readme_api.yml
+++ b/.github/workflows/update_readme_api.yml
@@ -1,23 +1,23 @@
 name: API to readme
-on:
+'on':
   schedule:
-    - cron: "31 14 * * *"
+    - cron: 31 14 * * *
 jobs:
   update_readme_api:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: gr2m/create-or-update-pull-request-action@v1.x
+        run: npm run docs
+        env:
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
+        with:
+          path: README.md
+          title: Sync API into README
+          branch: readme-api
+          commit-message: 'docs(README): sync API'
+      - name: checkout
+        uses: actions/checkout@v2
       - name: doc
         uses: actions/setup-node@v1
         with:
-          node-version: 14.3.0
-      - run: npm install
-      - run: npm run docs
-      - uses: gr2m/create-or-update-pull-request-action@v1.x
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          path: "README.md"
-          title: "API"
-          branch: "readme-api"
-          commit-message: "docs(README): sync API"
+          node-version: 14.4.0
