--- a/.github/workflows/update_readme_api.yml
+++ b/.github/workflows/update_readme_api.yml
@@ -6,8 +6,16 @@ jobs:
   update_readme_api:
     runs-on: ubuntu-latest
     steps:
-      - uses: gr2m/create-or-update-pull-request-action@v1.x
-        run: npm run docs
+      - name: checkout
+        uses: actions/checkout@v2
+      - name: doc
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.4.0
+      - run: npm install
+      - run: npm run docs
+      - name: pr
+        uses: gr2m/create-or-update-pull-request-action@v1.x
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         with:
@@ -15,9 +23,3 @@ jobs:
           title: Sync API into README
           branch: readme-api
           commit-message: 'docs(README): sync API'
-      - name: checkout
-        uses: actions/checkout@v2
-      - name: doc
-        uses: actions/setup-node@v1
-        with:
-          node-version: 14.4.0
