--- a/.github/workflows/update_readme_api.yml
+++ b/.github/workflows/update_readme_api.yml
@@ -6,23 +6,12 @@ jobs:
   update_readme_api:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
-        uses: actions/checkout@v2
-      - name: doc
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
         with:
           node-version: 14.4.0
       - run: npm install
       - run: npm run docs
-      - name: pr
-        uses: gr2m/create-or-update-pull-request-action@v1.x
-        env:
-          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
-        with:
-          path: README.md
-          title: Sync API into README
-          branch: readme-api
-          commit-message: 'docs(README): sync API'
       - uses: gr2m/create-or-update-pull-request-action@v1.x
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
