--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "src/index.mjs",
-  "svelte": "src/index.svelte",
+  "main": "./src/index.mjs",
+  "svelte": "./src/index.svelte",
   "description": "display time series data with svelte",
   "keywords": [
     "component",
@@ -21,7 +21,7 @@
   "license": "BSD-2-Clause",
   "scripts": {
     "start": "rollup -c example/rollup.config.mjs -w",
-    "test": "testcafe $BROWSER:headless tests/*-test.js -s test-results --app-init-delay 500 --app \"rollup -c example/rollup.config.mjs -w\"",
+    "test": "testcafe $BROWSER:headless tests/*-test.js -s test-results --app-init-delay 1000 --app \"rollup -c example/rollup.config.mjs -w\"",
     "docs": "documentation readme src/index.mjs --section=API",
     "lint": "documentation lint src/index.mjs"
   },
@@ -31,7 +31,7 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^8.0.1",
     "documentation": "^13.0.1",
-    "rollup": "^2.15.0",
+    "rollup": "^2.17.1",
     "rollup-plugin-dev": "^1.1.2",
     "rollup-plugin-svelte": "git+https://github.com/ctavan/rollup-plugin-svelte.git#handle-missing-exports-gracefully",
     "semantic-release": "^17.0.8",
