--- a/package.json
+++ b/package.json
@@ -22,19 +22,19 @@
   "scripts": {
     "start": "rollup -c example/rollup.config.mjs -w",
     "test": "testcafe $BROWSER:headless tests/*-test.js -s test-results --app-init-delay 1000 --app \"rollup -c example/rollup.config.mjs -w\"",
-    "docs": "documentation readme src/index.mjs --section=API",
-    "lint": "documentation lint src/index.mjs"
+    "docs": "documentation readme ./src/index.mjs --section=API",
+    "lint": "documentation lint ./src/index.mjs"
   },
   "dependencies": {
     "d3-scale": "^3.2.1"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^8.0.1",
+    "@rollup/plugin-node-resolve": "^8.1.0",
     "documentation": "^13.0.1",
-    "rollup": "^2.17.1",
+    "rollup": "^2.18.0",
     "rollup-plugin-dev": "^1.1.2",
     "rollup-plugin-svelte": "git+https://github.com/ctavan/rollup-plugin-svelte.git#handle-missing-exports-gracefully",
-    "semantic-release": "^17.0.8",
+    "semantic-release": "^17.1.0",
     "svelte": "^3.23.2",
     "testcafe": "^1.8.6"
   },
