--- a/.github/workflows/browser_ci.yml
+++ b/.github/workflows/browser_ci.yml
@@ -8,7 +8,7 @@ jobs:
         os:
           - ubuntu-latest
         node:
-          - '14'
+          - 14.5.0
         browser:
           - chrome
           - firefox
@@ -29,7 +29,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 14
+          node-version:
+            - 14
+            - 14.5.0
       - run: npm install
       - run: npx semantic-release
         env:
