--- a/package.json
+++ b/package.json
@@ -33,13 +33,10 @@
     "documentation": "^13.0.2",
     "rollup": "^2.26.5",
     "rollup-plugin-dev": "^1.1.2",
-    "rollup-plugin-svelte": "git+https://github.com/ctavan/rollup-plugin-svelte.git#handle-missing-exports-gracefully",
+    "rollup-plugin-svelte": "^6.0.0",
     "semantic-release": "^17.1.1",
     "svelte": "^3.24.1",
     "testcafe": "^1.9.1"
-  },
-  "engines": {
-    "node": ">=14.3.0"
   },
   "repository": {
     "type": "git",
