chore(scripts): add rollup -c example/rollup.config.mjs -w && rollup -c  -w (scripts.start) chore(scripts): add testcafe $BROWSER:headless tests/cafe/*.js -s build/test --app-init-delay 1000 --app "rollup -c example/rollup.config.mjs -w" && testcafe $BROWSER:headless tests/cafe/*.js -s build/test --app-init-delay 1000 --app "rollup -c  -w" (scripts.test:cafe)

--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   ],
   "license": "BSD-2-Clause",
   "scripts": {
-    "start": "rollup -c example/rollup.config.mjs -w",
+    "start": "rollup -c example/rollup.config.mjs -w && rollup -c  -w",
     "test": "npm run test:cafe",
     "docs": "documentation readme ./src/index.mjs --section=API",
     "lint": "documentation lint ./src/index.mjs",
-    "test:cafe": "testcafe $BROWSER:headless tests/cafe/*.js -s build/test --app-init-delay 1000 --app \"rollup -c example/rollup.config.mjs -w\""
+    "test:cafe": "testcafe $BROWSER:headless tests/cafe/*.js -s build/test --app-init-delay 1000 --app \"rollup -c example/rollup.config.mjs -w\" && testcafe $BROWSER:headless tests/cafe/*.js -s build/test --app-init-delay 1000 --app \"rollup -c  -w\""
   },
   "dependencies": {
     "d3-scale": "^3.2.2"
