--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "documentation": "^13.0.2",
     "rollup": "^2.33.3",
     "rollup-plugin-dev": "^1.1.3",
+    "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-svelte": "^7.0.0",
     "semantic-release": "^17.3.0",
     "svelte": "^3.30.0",
