--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "start": "rollup -c tests/app/rollup.config.mjs -w",
     "test": "npm run test:cafe",
     "test:cafe": "testcafe $BROWSER:headless tests/cafe/*.js -s build/test --app-init-delay 1000 --app \"rollup -c tests/app/rollup.config.mjs -w\"",
-    "docs": "documentation readme ./src/index.mjs --section=API",
-    "lint": "documentation lint ./src/index.mjs"
+    "docs": "documentation readme ./src/index.mjs --section=API && documentation readme ./src/index.svelte --section=API",
+    "lint": "documentation lint ./src/index.mjs && npm run lint:docs",
+    "lint:docs": "documentation lint ./src/index.svelte"
   },
   "dependencies": {
     "d3-scale": "^3.2.2"
@@ -33,7 +34,7 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-virtual": "^2.0.3",
-    "documentation": "^13.0.2",
+    "documentation": "github:arlac77/documentation",
     "rollup": "^2.33.3",
     "rollup-plugin-dev": "^1.1.3",
     "rollup-plugin-postcss": "^3.1.8",
