--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@rollup/plugin-virtual": "^2.0.3",
     "documentation": "github:arlac77/documentation",
-    "postcss-import": "12.0.1",
+    "postcss-import": "^14.0.0",
     "rollup": "^2.35.1",
     "rollup-plugin-dev": "^1.1.3",
     "rollup-plugin-postcss": "^4.0.0",
