--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-virtual": "^2.0.3",
-    "documentation": "github:arlac77/documentation",
+    "documentation": "^13.2.0",
     "postcss": "^8.2.8",
     "postcss-import": "^14.0.0",
     "rollup": "^2.41.2",
