--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "rollup-plugin-svelte": "^7.1.0",
     "semantic-release": "^19.0.2",
     "svelte": "^3.47.0",
-    "testcafe": "^1.18.5"
+    "testcafe": "^1.18.6"
   },
   "repository": {
     "type": "git",
@@ -56,6 +56,7 @@
   "template": {
     "inheritFrom": [
       "arlac77/template-arlac77-github",
+      "arlac77/template-cloudflare",
       "arlac77/template-svelte-component"
     ]
   }
