--- a/package.json
+++ b/package.json
@@ -32,15 +32,28 @@
     "d3-scale": "^4.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^3.1.9",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-inject": "^4.0.3",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-replace": "^4.0.0",
+    "@rollup/plugin-typescript": "^8.3.2",
     "@rollup/plugin-virtual": "^2.1.0",
     "documentation": "^13.2.5",
     "postcss": "^8.4.14",
     "postcss-import": "^14.1.0",
     "rollup": "^2.74.1",
+    "rollup-plugin-cleanup": "^3.2.1",
+    "rollup-plugin-consts": "^1.1.0",
     "rollup-plugin-dev": "^2.0.2",
+    "rollup-plugin-executable": "^1.6.3",
+    "rollup-plugin-gzip": "^3.0.1",
+    "rollup-plugin-native": "^1.2.16",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
     "semantic-release": "^19.0.2",
     "svelte": "^3.48.0",
     "testcafe": "^1.18.6"
