--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "component",
     "svelte",
     "time-series",
+    "vite",
     "web"
   ],
   "contributors": [
@@ -21,12 +22,14 @@
   ],
   "license": "BSD-2-Clause",
   "scripts": {
-    "start": "rollup -c tests/app/rollup.config.mjs -w",
+    "prepare": "vite build",
+    "start": "vite",
     "test": "npm run test:cafe",
-    "test:cafe": "testcafe $BROWSER:headless tests/cafe/*.js -s build/test --page-request-timeout 9000 --app-init-delay 3000 --app \"rollup -c tests/app/rollup.config.mjs -w\"",
-    "docs": "documentation readme --section=API ./src/**/*.mjs",
+    "test:cafe": "testcafe $BROWSER:headless tests/cafe/*.js -s build/test --page-request-timeout 9000 --app-init-delay 3000 --app vite",
+    "docs": "documentation readme --section=API ./src/**/*.mjs && documentation readme --section=API {{javascript.source}}",
     "lint": "documentation lint ./src/index.mjs && npm run lint:docs",
-    "lint:docs": "documentation lint ./src/**/*.mjs"
+    "lint:docs": "documentation lint ./src/**/*.mjs && documentation lint {{javascript.source}}",
+    "preview": "vite preview"
   },
   "dependencies": {
     "d3-scale": "^4.0.0"
@@ -34,16 +37,18 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-virtual": "^2.1.0",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/release-notes-generator": "^10.0.3",
+    "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "documentation": "^13.2.5",
-    "postcss": "^8.4.14",
-    "postcss-import": "^14.1.0",
+    "npm-pkgbuild": "^10.11.3",
     "rollup": "^2.75.7",
     "rollup-plugin-dev": "^2.0.2",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-svelte": "^7.1.0",
     "semantic-release": "^19.0.3",
-    "svelte": "^3.48.0",
-    "testcafe": "^1.19.0"
+    "svelte": "^3.49.0",
+    "testcafe": "^1.19.0",
+    "vite": "^3.0.0"
   },
   "repository": {
     "type": "git",
@@ -53,11 +58,30 @@
     "url": "https://github.com/arlac77/svelte-time-series/issues"
   },
   "homepage": "https://github.com/arlac77/svelte-time-series#readme",
+  "pkgbuild": {
+    "content": {},
+    "groups": "examples"
+  },
+  "release": {
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/npm",
+      [
+        "@semantic-release/exec",
+        {
+          "publishCmd": "npx npm-pkgbuild --available --continue --verbose"
+        }
+      ],
+      "@semantic-release/github"
+    ]
+  },
   "template": {
     "inheritFrom": [
       "arlac77/template-arlac77-github",
       "arlac77/template-cloudflare",
-      "arlac77/template-svelte-component"
+      "arlac77/template-pacman",
+      "arlac77/template-svelte-component#next"
     ]
   }
 }
