--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
       "arlac77/template-arlac77-github",
       "arlac77/template-cloudflare",
       "arlac77/template-pacman",
-      "arlac77/template-svelte-component#next"
+      "arlac77/template-svelte-component"
     ]
   }
 }
