--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
       [
         "@semantic-release/exec",
         {
-          "publishCmd": "npx npm-pkgbuild --available --continue --verbose"
+          "publishCmd": "npx npm-pkgbuild --available --continue"
         }
       ],
       [
