--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "d3-scale": "^4.0.0",
+    "d3-scale": "^4.0.0"
+  },
+  "optionalDependencies": {
     "mf-hosting": "^1.8.0"
   },
   "devDependencies": {
@@ -43,6 +45,7 @@
     "documentation": "^14.0.0",
     "npm-pkgbuild": "^10.11.3",
     "semantic-release": "^19.0.3",
+    "mf-styling": "^1.7.31",
     "svelte": "^3.49.0",
     "testcafe": "^2.0.0",
     "vite": "^3.0.0"
@@ -56,7 +59,10 @@
   },
   "homepage": "https://github.com/arlac77/svelte-time-series#readme",
   "pkgbuild": {
-    "content": {},
+    "content": {
+      "${install.dir}": "build/",
+      "${nginx.sites.dir}${name}.conf": "pkg/nginx.conf"
+    },
     "groups": "examples"
   },
   "release": {
