--- a/package.json
+++ b/package.json
@@ -25,17 +25,14 @@
     "prepare": "vite build",
     "start": "vite",
     "test": "npm run test:cafe",
-    "test:cafe": "testcafe $BROWSER:headless tests/cafe/*.js -s build/test --page-request-timeout 9000 --app-init-delay 3000 --app vite",
-    "docs": "documentation readme --section=API ./src/**/*.mjs",
+    "test:cafe": "testcafe $BROWSER:headless tests/cafe/*.js -s build/test --page-request-timeout 3000 --app-init-delay 3000 --app \"vite preview\"",
+    "docs": "documentation readme --section=API ./src/**/*.mjs && documentation readme --section=API {{javascript.source}}",
     "lint": "documentation lint ./src/index.mjs && npm run lint:docs",
-    "lint:docs": "documentation lint ./src/**/*.mjs",
+    "lint:docs": "documentation lint ./src/**/*.mjs && documentation lint {{javascript.source}}",
     "preview": "vite preview"
   },
   "dependencies": {
     "d3-scale": "^4.0.0"
-  },
-  "optionalDependencies": {
-    "mf-hosting": "^1.8.0"
   },
   "devDependencies": {
     "@semantic-release/commit-analyzer": "^9.0.2",
@@ -43,12 +40,15 @@
     "@semantic-release/release-notes-generator": "^10.0.3",
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "documentation": "^14.0.0",
-    "npm-pkgbuild": "^10.11.3",
-    "semantic-release": "^19.0.3",
     "mf-styling": "^1.7.31",
+    "npm-pkgbuild": "^10.15.20",
+    "semantic-release": "^19.0.5",
     "svelte": "^3.49.0",
-    "testcafe": "^2.0.0",
-    "vite": "^3.0.0"
+    "testcafe": "^2.1.0",
+    "vite": "^4.0.0"
+  },
+  "optionalDependencies": {
+    "mf-hosting": "^1.8.0"
   },
   "repository": {
     "type": "git",
