--- a/.github/workflows/browser_ci.yml
+++ b/.github/workflows/browser_ci.yml
@@ -12,11 +12,17 @@ jobs:
         browser:
           - chrome
           - firefox
+        node-version: 18.12.1
+        firefox:
+          - latest
     steps:
+      - uses: browser-actions/setup-firefox@latest
+        with:
+          firefox-version: ${{ matrix.firefox }}
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3.5.1
         with:
-          node-version: ${{ matrix.node }}
+          node-version: ${{ matrix.node-version }}
           cache: npm
       - run: npm cit
         env:
@@ -45,7 +51,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3.5.1
         with:
-          node-version: 18.11.0
+          node-version: 18.12.1
           cache: npm
       - run: npm ci
       - run: npx semantic-release
