--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "start": "vite",
     "test": "npm run test:cafe",
     "test:cafe": "testcafe $BROWSER:headless tests/cafe/*.js -s build/test --page-request-timeout 3000 --app-init-delay 3000 --app \"vite preview\"",
-    "docs": "documentation readme --section=API ./src/**/*.mjs && documentation readme --section=API {{javascript.source}}",
-    "lint": "documentation lint ./src/index.mjs && npm run lint:docs",
-    "lint:docs": "documentation lint ./src/**/*.mjs && documentation lint {{javascript.source}}",
+    "docs": "documentation readme --section=API ./src/**/*.mjs",
+    "lint": "npm run lint:css && npm run lint:docs",
+    "lint:docs": "documentation lint ./src/**/*.mjs",
     "preview": "vite preview"
   },
   "dependencies": {
