--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "start": "vite",
     "test": "npm run test:cafe",
     "test:cafe": "testcafe $BROWSER:headless tests/cafe/*.js -s build/test --page-request-timeout 3000 --app-init-delay 3000 --app \"vite preview\"",
-    "docs": "documentation readme --section=API ./src/**/*.mjs",
+    "docs": "documentation readme --section=API ./src/**/*.mjs && documentation readme --section=API {{javascript.source}}",
     "lint": "npm run lint:css && npm run lint:docs",
-    "lint:docs": "documentation lint ./src/**/*.mjs",
+    "lint:docs": "documentation lint ./src/**/*.mjs && documentation lint {{javascript.source}}",
+    "lint:css": "stylelint ./src/*.css",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -43,6 +44,8 @@
     "mf-styling": "^1.7.31",
     "npm-pkgbuild": "^10.15.20",
     "semantic-release": "^19.0.5",
+    "stylelint": "^14.16.0",
+    "stylelint-config-standard": "^29.0.0",
     "svelte": "^3.49.0",
     "testcafe": "^2.1.0",
     "vite": "^4.0.0"
@@ -97,6 +100,7 @@
     "inheritFrom": [
       "arlac77/template-arlac77-github",
       "arlac77/template-cloudflare",
+      "arlac77/template-css",
       "arlac77/template-pacman",
       "arlac77/template-svelte-component"
     ]
