--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "semantic-release": "^20.0.2",
     "stylelint": "^14.16.1",
     "stylelint-config-standard": "^29.0.0",
-    "svelte": "^3.55.0",
+    "svelte": "^3.55.1",
     "testcafe": "^15.1.317922",
     "vite": "^4.0.4"
   },
@@ -55,7 +55,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/arlac77/svelte-time-series.git"
+    "url": "https://github.com/arlac77/svelte-time-series"
   },
   "bugs": {
     "url": "https://github.com/arlac77/svelte-time-series/issues"
