chore: add rpm artifact

--- a/package.json
+++ b/package.json
@@ -91,6 +91,10 @@
             {
               "path": "dist/*.pkg.*",
               "label": "Arch Linux Package"
+            },
+            {
+              "path": "dist/*.rpm",
+              "label": "RPM"
             }
           ]
         }
