--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "prepare": "vite build",
     "start": "vite",
     "test": "npm run test:cafe",
-    "test:cafe": "testcafe $BROWSER:headless tests/cafe/*.js -s build/test --page-request-timeout 3000 --app-init-delay 3000 --app \"vite preview\"",
+    "test:cafe": "testcafe $BROWSER:headless tests/cafe/*.js -s build/test --page-request-timeout 6000 --app-init-delay 10000 --app \"vite\"",
     "docs": "documentation readme --section=API ./src/**/*.mjs && documentation readme --section=API {{javascript.source}}",
     "lint": "npm run lint:css && npm run lint:docs",
     "lint:docs": "documentation lint ./src/**/*.mjs && documentation lint {{javascript.source}}",
