--- a/package.json
+++ b/package.json
@@ -36,14 +36,14 @@
     "d3-scale": "^4.0.0"
   },
   "devDependencies": {
-    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/commit-analyzer": "^10.0.0",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/release-notes-generator": "^11.0.2",
     "@sveltejs/vite-plugin-svelte": "^2.4.1",
     "documentation": "^14.0.2",
     "mf-styling": "^1.7.57",
     "npm-pkgbuild": "^11.8.6",
-    "semantic-release": "^21.0.2",
+    "semantic-release": "^21.0.3s",
     "stylelint": "^15.6.2",
     "stylelint-config-standard": "^33.0.0",
     "svelte": "^3.59.1",
