--- a/package.json
+++ b/package.json
@@ -126,7 +126,7 @@
       "arlac77/template-arlac77-github",
       "arlac77/template-cloudflare",
       "arlac77/template-css",
-      "arlac77/template-pacman",
+      "arlac77/template-npm-pkgbuild",
       "arlac77/template-svelte-component"
     ]
   }
