--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/arlac77/svelte-time-series"
+    "url": "git+https://github.com/arlac77/svelte-time-series.git"
   },
   "bugs": {
     "url": "https://github.com/arlac77/svelte-time-series/issues"
