--- a/.github/workflows/browser_ci.yml
+++ b/.github/workflows/browser_ci.yml
@@ -22,7 +22,9 @@ jobs:
         browser:
           - chrome
           - firefox
-        node-version: 20.12.0
+        node-version:
+          - 20.12.0
+          - 20.12.1
         firefox:
           - latest
     steps:
@@ -67,7 +69,7 @@ jobs:
       - uses: actions/checkout@v4.1.2
       - uses: actions/setup-node@v4.0.2
         with:
-          node-version: 20.12.0
+          node-version: 20.12.1
           cache: npm
           cache-dependency-path: package-lock.json
       - run: npm ci
