--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
     "testcafe": "^3.6.0",
     "vite": "^5.2.11"
   },
+  "peerDependencies": {
+    "svelte": "^4.0.0|^5.0.0"
+  },
   "optionalDependencies": {
     "mf-hosting-cloudflare": "^1.0.6",
     "mf-hosting-frontend": "^3.0.3"
