--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "semantic-release": "^23.1.1",
     "stylelint": "^16.5.0",
     "stylelint-config-standard": "^36.0.0",
-    "svelte": "^4.2.17",
+    "svelte": "^5.0.0-next.134",
     "testcafe": "^3.6.0",
     "vite": "^5.2.11"
   },
