--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "prepare:vite": "vite build",
     "start": "vite",
     "test": "npm run test:cafe",
-    "test:cafe": "testcafe $BROWSER:headless tests/cafe/*-cafe.mjs -s build/test --page-request-timeout 5000 --app-init-delay 8000 --app vite",
+    "test:cafe": "testcafe $BROWSER:headless tests/cafe/*-cafe.mjs --esm -s build/test --page-request-timeout 5000 --app-init-delay 8000 --app vite",
     "docs": "documentation readme --section=API ./src/**/*.mjs",
     "lint": "npm run lint:css && npm run lint:docs",
     "lint:docs": "documentation lint ./src/**/*.mjs",
